# wefter

./: .gitignore  .luarc.json  Cargo.toml  LICENCE  README.md  loom.d.lua
.cargo/: config.toml
.loom/loom/: auto.lua  init.lua
.loom/loom/templates/api/: api.rs  list.md  meta.lua
.wefter/wefter/: auto.lua  init.lua
.wefter/wefter/templates/api/: api.rs  meta.lua
examples/c_classes/: main.c
examples/c_classes/.wefter/c_classes/: auto.lua  init.lua
examples/c_classes/.wefter/c_classes/templates/: class.h
src/: cli.rs  config.rs  engine.rs  error.rs  main.rs  templates.rs  tui.rs
src/cli/: log.rs  mod.rs  params.rs
src/engine/: api.rs  def.rs  interpreter.rs  mod.rs
src/engine/api/: fs.rs  io.rs  mod.rs  template.rs  txt.rs
src/fs/: dir.rs  dirs.rs  hist.rs  mod.rs  res.rs  utils.rs
static/: about.md  help.md  resource_list.md  resource_list_template.md
static/cli/: about.md  profile_def.md  profile_list.md
static/errors/: empty_parameters.md  generic_error.md  no_available_profiles.md
static/lua/: loom.d.lua  wefter.d.lua
