[package]
name = "loom"
version = "0.1.0"
edition = "2024"
authors = ["taleroangel (angelgotalero@outlook.com)"]

[dependencies]

# Language qol features
thiserror = "2.0.18"
anyhow = "1.0.101"

# Logging
log = { version = "0.4.29" }
fern = { version = "0.7.1", features = [ "colored" ] }

# Parsing command line arguments
clap = { version = "4.5.57", features = [ "default", "derive" ] }
# Showing pretty cmd line arguments
clap-help = "1.5.0"

# Show resources in markdown table
termimad = "0.34.1"
# Pretty user input
inquire = "0.9.3"

# Accessing app local data folder OS-agnostic
directories = "6.0.0"

# Deserializing configuration file
serde = { version = "1.0.228", features = [ "default", "derive" ] }
toml = { version = "0.9.11", features = [ "default" ] }

# Lua runtime for resource configurations
mlua = { version = "0.11.6", features = [ "lua55", "vendored", "anyhow", "serde" ] }

# Deserializing lua tables for templating
serde_json = "1.0.149"

# Templating engine
tera = "1.20.1"

# Utilities for the API
convert_case = "0.11.0"
