[package]
name = "wefter"
version = "0.2.4-beta"
authors = ["taleroangel <angelgotalero@outlook.com>"]
edition = "2024"
description = "Fully-customizable automation runtime using Lua"
repository = "https://github.com/taleroangel/wefter"
license = "LGPL-3.0-only"
readme = "README.md"

exclude = [
	".wefter/",
	".nvim.lua",
	".luarc.json",
	"examples",
]

[dependencies]

# Language qol features
thiserror = "2.0.18"
anyhow = "1.0.103"

# Logging
log = { version = "0.4.33" }
fern = { version = "0.7.1", features = [ "colored" ] }

# Parsing command line arguments
clap = { version = "4.6.2", features = [ "default", "derive" ] }
# Showing pretty cmd line arguments
clap-help = "1.6.0"

# Show resources in markdown table
termimad = "0.35.1"
# Pretty user input
inquire = "0.9.4"

# Accessing app local data folder OS-agnostic
directories = "6.0.0"

# Deserializing configuration file
serde = { version = "1.0.228", features = [ "default", "derive" ] }
toml = { version = "1.1.3", features = [ "default" ] }

# Lua runtime for resource configurations
mlua = { version = "0.12.0", features = [ "lua55", "vendored", "anyhow", "serde" ] }

# Deserializing lua tables for templating
serde_json = "1.0.150"

# Templating engine
tera = "2.0.0"

# Utilities for the API
convert_case = "0.11.0"
